// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. Renders default layout 1`] = `
<View
  aspectRatio={1.5}
  style={Object {}}
>
  <View
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <Image
      onLoad={[Function]}
      source={
        Object {
          "uri": "http://example.com/image.jpg&preview=true",
        }
      }
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": "100%",
            "width": "100%",
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    >
      <Image
        onLoad={[Function]}
        source={
          Object {
            "uri": "http://example.com/image.jpg",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": "100%",
              "width": "100%",
            },
            undefined,
          ]
        }
      />
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flex": 1,
            },
            null,
          ]
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <BVLinearGradient
            colors={
              Array [
                "#F9F9F9",
                "#EDEDED",
              ]
            }
            end={
              Object {
                "x": -0.09302964577578221,
                "y": 0.11488204504197774,
              }
            }
            locations={
              Array [
                0,
                1,
              ]
            }
            start={
              Object {
                "x": 1,
                "y": 0,
              }
            }
            style={
              Array [
                Object {
                  "flex": 1,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`2. Renders default layout without uri 1`] = `
<View
  aspectRatio={1.5}
  style={Object {}}
>
  <View
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <Image
      onLoad={[Function]}
      source={
        Object {
          "uri": "&preview=true",
        }
      }
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": "100%",
            "width": "100%",
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    >
      <Image
        onLoad={[Function]}
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": "100%",
              "width": "100%",
            },
            undefined,
          ]
        }
      />
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flex": 1,
            },
            null,
          ]
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <BVLinearGradient
            colors={
              Array [
                "#F9F9F9",
                "#EDEDED",
              ]
            }
            end={
              Object {
                "x": -0.09302964577578221,
                "y": 0.11488204504197774,
              }
            }
            locations={
              Array [
                0,
                1,
              ]
            }
            start={
              Object {
                "x": 1,
                "y": 0,
              }
            }
            style={
              Array [
                Object {
                  "flex": 1,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`3. Renders with a passed style prop 1`] = `
<View
  aspectRatio={1.5}
  style={
    Object {
      "width": 100,
    }
  }
>
  <View
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <Image
      onLoad={[Function]}
      source={
        Object {
          "uri": "http://example.com/image.jpg&preview=true",
        }
      }
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": "100%",
            "width": "100%",
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    >
      <Image
        onLoad={[Function]}
        source={
          Object {
            "uri": "http://example.com/image.jpg",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": "100%",
              "width": "100%",
            },
            undefined,
          ]
        }
      />
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flex": 1,
            },
            null,
          ]
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <BVLinearGradient
            colors={
              Array [
                "#F9F9F9",
                "#EDEDED",
              ]
            }
            end={
              Object {
                "x": -0.09302964577578221,
                "y": 0.11488204504197774,
              }
            }
            locations={
              Array [
                0,
                1,
              ]
            }
            start={
              Object {
                "x": 1,
                "y": 0,
              }
            }
            style={
              Array [
                Object {
                  "flex": 1,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`4. Renders with prepended https schema 1`] = `
<View
  aspectRatio={1.5}
  style={Object {}}
>
  <View
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <Image
      onLoad={[Function]}
      source={
        Object {
          "uri": "https://example.com/image.jpg&preview=true",
        }
      }
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": "100%",
            "width": "100%",
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    >
      <Image
        onLoad={[Function]}
        source={
          Object {
            "uri": "https://example.com/image.jpg",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": "100%",
              "width": "100%",
            },
            undefined,
          ]
        }
      />
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flex": 1,
            },
            null,
          ]
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <BVLinearGradient
            colors={
              Array [
                "#F9F9F9",
                "#EDEDED",
              ]
            }
            end={
              Object {
                "x": -0.09302964577578221,
                "y": 0.11488204504197774,
              }
            }
            locations={
              Array [
                0,
                1,
              ]
            }
            start={
              Object {
                "x": 1,
                "y": 0,
              }
            }
            style={
              Array [
                Object {
                  "flex": 1,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`5. Renders default layout 1`] = `
<View>
  <Modal
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    presentationStyle="fullScreen"
    visible={false}
  >
    <View
      style={
        Object {
          "backgroundColor": "#1D1D1B",
          "flexDirection": "column",
          "height": "100%",
          "width": "100%",
        }
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hitSlop={undefined}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "type": "ThemeAttrAndroid",
          }
        }
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
        testID={undefined}
      >
        <svg
          height="24"
          style={Object {}}
          viewBox="0 0 24 24"
          width="24"
        >
          <g
            fill="rgba(255, 255, 255, 0.8)"
            style={Object {}}
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              style={Object {}}
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
              style={Object {}}
            />
          </g>
        </svg>
      </View>
      <View
        onMoveShouldSetResponder={[Function]}
        onMoveShouldSetResponderCapture={[Function]}
        onResponderEnd={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderReject={[Function]}
        onResponderRelease={[Function]}
        onResponderStart={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        onStartShouldSetResponderCapture={[Function]}
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flexGrow": 1,
              "justifyContent": "center",
            }
          }
          testID={undefined}
        >
          <View
            collapsable={undefined}
            style={
              Object {
                "transform": Array [
                  Object {
                    "scale": 1,
                  },
                  Object {
                    "rotate": "0 deg",
                  },
                  Object {
                    "perspective": 1000,
                  },
                ],
              }
            }
          >
            <View
              aspectRatio={1.5}
              style={
                Object {
                  "opacity": 1,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "height": "100%",
                    "width": "100%",
                  }
                }
              >
                <Image
                  onLoad={[Function]}
                  source={
                    Object {
                      "uri": "http://example.com/image.jpg&preview=true",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "bottom": 0,
                        "left": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      },
                      Object {
                        "height": "100%",
                        "width": "100%",
                      },
                      undefined,
                    ]
                  }
                />
                <View
                  style={
                    Object {
                      "height": "100%",
                      "width": "100%",
                    }
                  }
                >
                  <Image
                    onLoad={[Function]}
                    source={
                      Object {
                        "uri": "http://example.com/image.jpg",
                      }
                    }
                    style={
                      Array [
                        Object {
                          "bottom": 0,
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                        },
                        Object {
                          "height": "100%",
                          "width": "100%",
                        },
                        undefined,
                      ]
                    }
                  />
                  <View
                    onLayout={[Function]}
                    style={
                      Array [
                        Object {
                          "flex": 1,
                        },
                        null,
                      ]
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <BVLinearGradient
                        colors={
                          Array [
                            "#F9F9F9",
                            "#EDEDED",
                          ]
                        }
                        end={
                          Object {
                            "x": -0.09302964577578221,
                            "y": 0.11488204504197774,
                          }
                        }
                        locations={
                          Array [
                            0,
                            1,
                          ]
                        }
                        start={
                          Object {
                            "x": 1,
                            "y": 0,
                          }
                        }
                        style={
                          Array [
                            Object {
                              "flex": 1,
                            },
                          ]
                        }
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </Modal>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackground",
        "type": "ThemeAttrAndroid",
      }
    }
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    pointerEvents="box-only"
    testID={undefined}
  >
    <View
      aspectRatio={1.5}
      style={Object {}}
    >
      <View
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <Image
          onLoad={[Function]}
          source={
            Object {
              "uri": "http://example.com/image.jpg&preview=true",
            }
          }
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "height": "100%",
                "width": "100%",
              },
              undefined,
            ]
          }
        />
        <View
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        >
          <Image
            onLoad={[Function]}
            source={
              Object {
                "uri": "http://example.com/image.jpg",
              }
            }
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "height": "100%",
                  "width": "100%",
                },
                undefined,
              ]
            }
          />
          <View
            onLayout={[Function]}
            style={
              Array [
                Object {
                  "flex": 1,
                },
                null,
              ]
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <BVLinearGradient
                colors={
                  Array [
                    "#F9F9F9",
                    "#EDEDED",
                  ]
                }
                end={
                  Object {
                    "x": -0.09302964577578221,
                    "y": 0.11488204504197774,
                  }
                }
                locations={
                  Array [
                    0,
                    1,
                  ]
                }
                start={
                  Object {
                    "x": 1,
                    "y": 0,
                  }
                }
                style={
                  Array [
                    Object {
                      "flex": 1,
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`6. Renders a placeholder 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      null,
    ]
  }
>
  <Gradient
    degrees={264}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
        ]
      }
    >
      <T
        height={82.23350253807106}
        width={82.23350253807106}
      />
    </View>
  </Gradient>
</View>
`;

exports[`7. Renders the default svg 1`] = `
<Svg
  height={100}
  version="1.1"
  viewBox="145 50 108 120"
  width={100}
>
  <G
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <Path
      d="M211.26076,54 L211.231367,54 L147.67512,54 L145,85.7081465 L146.922096,86.4489102 C146.922096,86.4489102 164.867589,68.1355181 168.301115,65.0001546 C171.728017,61.8689133 174.237132,61.0885763 176.436179,60.3527593 C180.998206,59.169681 185.977937,59.2150255 185.977937,59.2150255 L186.109581,59.2150255 L186.109581,156.560932 L169.259886,164.473953 L169.259886,166 L228.735147,166 L228.735147,164.473953 L211.889177,156.560932 L211.889177,59.2150255 L212.01751,59.2150255 C212.01751,59.2150255 216.992272,59.169681 221.558854,60.3527593 C223.757072,61.0885763 226.266601,61.8689133 229.691848,65.0001546 C233.130341,68.1355181 251.071695,86.4489102 251.071695,86.4489102 L253,85.7081465 L250.317842,54 L211.270695,54 L211.242545,54"
      fill="#FFFFFF"
    />
  </G>
</Svg>
`;
